# custom-terminal

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx  Browser.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  ModuleRail.tsx  PaneNode.tsx  SessionSidePanel.css  SessionSidePanel.tsx  SessionTimeline.tsx  Sidebar.tsx  Terminal.tsx  TitleBar.tsx  Toasts.tsx  icons.tsx  panes.ts  store.ts  theme.css  usage.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser.rs  claude_sessions.rs  lib.rs  main.rs  pty.rs
