[package]
name = "ct"
version = "0.1.0"
description = "Custom Terminal"
authors = ["fsedis"]
edition = "2021"

[lib]
name = "ct_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
